Fix FAQ item arrow alignment

--- a/src/style/app/sections/_faq.scss
+++ b/src/style/app/sections/_faq.scss
@@ -43,12 +43,13 @@
   .faq-btn {
     @include t();
     @include font(700);
-    @include flex(18px, flex-start);
+    @include grid(18px, 24px 1fr);
     margin-bottom: 20px;
     color: var(--color-text);
     font-size: 2.2rem;
     padding: 0;
     text-align: left;
+    width: 100%;
 
     &:hover {
       color: var(--color-blue);
@@ -66,7 +67,7 @@
     @include t(0.15s);
     overflow: hidden;
     font-size: 1.4rem;
-    padding-left: 50px;
+    padding-left: 40px;
 
     p {
       font-size: 1.5rem;
