--- a/src/style/overrides/_tablet.scss
+++ b/src/style/overrides/_tablet.scss
@@ -368,8 +368,6 @@
 
       svg {
         @include t();
-        // width: 24px !important;
-        // height: 24px !important;
         line-height: unset;
         font-size: 20px !important;
         color: inherit;
@@ -377,7 +375,7 @@
     }
 
     .faq-content {
-      padding-left: 50px;
+      padding-left: 44px;
 
       p {
         font-size: 1.2rem;
